Atualizando Swagger, Rotas Locais, trabalhando mudançca de ordem de locais em rotas_locais
