# swagger.json
@@ -32,7 +32,9 @@
                     "example": "MinhaSenhaDeUsuario"
                   }
                 },
-                "required": ["cpf"]
+                "required": [
+                  "cpf"
+                ]
               }
             }
           }
@@ -236,6 +238,49 @@
         }
       }
     },
+    "/login/userDataModify": {
+      "post": {
+        "description": "Rota de modificação de dados de usuario",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "idUsuario": {
+                    "type": "int",
+                    "description": "Insira o ID",
+                    "example": "1"
+                  },
+                  "cpf": {
+                    "type": "int",
+                    "description": "CPF, de 11 digitos",
+                    "example": "12345678901"
+                  },
+                  "nomedeUsuario": {
+                    "type": "string",
+                    "description": "Insira sua senha de usuario atual",
+                    "example": "usuario123"
+                  },
+                  "permissao": {
+                    "type": "string",
+                    "description": "Insira sua senha",
+                    "example": "vigia"
+                  }
+                },
+                "required": [
+                  "idUsuario",
+                  "cpf",
+                  "nomedeUsuario",
+                  "permissao"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
     "/login/deactivate": {
       "post": {
         "description": "Rota para 'excluir' usuario do sistema",
@@ -252,7 +297,9 @@
                     "example": "1"
                   }
                 },
-                "required": ["idUsuario"]
+                "required": [
+                  "idUsuario"
+                ]
               }
             }
           }
@@ -311,18 +358,17 @@
                     "type": "string",
                     "description": "Horario que a rota deverá ser iniciada",
                     "example": "13:00"
-                  }
-                  ,
+                  },
                   "idLocal": {
                     "type": "array",
                     "description": "Array de locais a serem adicionados na rota (É necessário que esses locais já tenham sido criados",
                     "example": "[1,2]"
                   },
-                  "horarioLocais":{
+                  "horarioLocais": {
                     "type": "array",
                     "description": "Array de horários a ser adicionado no local, cada item deve ser uma string",
-                    "example":"['13:00', '14:00']"
-                  } 
+                    "example": "['13:00', '14:00']"
+                  }
                 }
               }
             }
@@ -403,6 +449,35 @@
         }
       }
     },
+    "/rota/listLocals": {
+      "get": {
+        "description": "Retornar os locais atribuidos em um idRota",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "idRota",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "description": "id da rota a ser consultado os locais",
+              "example": "4"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Locais da rota retornados com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/rota/defUser": {
       "post": {
         "description": "Definir Usuário para uma rota",
@@ -418,40 +493,40 @@
                     "description": "Id da Rota á ser designada o usuário",
                     "example": "2"
                   },
-                  "idUsuario":{
+                  "idUsuario": {
                     "type": "integer",
                     "description": "Id do Usuario á designar a rota",
                     "example": "1"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Usuario atribuido com sucesso",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object"
+                  }
                 }
               }
             }
           },
-          "400": {
-            "description": "Erro ao atribuir usuário",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object"
+          "responses": {
+            "200": {
+              "description": "Usuario atribuido com sucesso",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object"
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "Erro ao atribuir usuário",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object"
+                  }
                 }
               }
             }
           }
-          
         }
       }
-    }},
+    },
     "/ronda/createAndReturn": {
       "get": {
         "description": "Retornar as rondas, e caso nao tenha sido criado rondas no dia, já as cria automaticamente",
@@ -529,6 +604,36 @@
         }
       }
     },
+    "/ronda/desfazerRonda": {
+      "post": {
+        "description": "Desfazer uma ronda iniciada por engano",
+        "requestBody": {
+          "requires": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "idRonda": {
+                    "type": "integer",
+                    "description": "ID da ronda a ser desfeita",
+                    "example": "1"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Ronda desfeita com sucesso"
+          },
+          "400": {
+            "description": "Erro ao desfazer ronda"
+          }
+        }
+      }
+    },
     "/ronda/search": {
       "post": {
         "description": "Rota para pesquisa de ronda com base nos parametros fornecidos",
@@ -599,7 +704,6 @@
         }
       }
     },
-
     "/local/list": {
       "get": {
         "description": "Rota para resgatar a lista de todos os usuários do sistema",
@@ -656,6 +760,18 @@
     "/local/create": {
       "post": {
         "description": "Rota para criar um local",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "idSetor",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "description": "Id do setor á qual esse local pertence",
+              "example": "0"
+            }
+          }
+        ],
         "requestBody": {
           "requires": true,
           "content": {
@@ -667,6 +783,14 @@
                     "type": "string",
                     "description": "Nome do local a ser criado",
                     "example": "Pátio"
+                  },
+                  "latitude": {
+                    "type": "string",
+                    "description": "Coordenadas do local a ser criado"
+                  },
+                  "longitude": {
+                    "type": "string",
+                    "description": "Coordenadas do local a ser criado"
                   }
                 }
               }
@@ -679,6 +803,48 @@
           },
           "400": {
             "description": "Erro ao criar local"
+          }
+        }
+      }
+    },
+    "/local/edit": {
+      "post": {
+        "description": "Rota para criar um local",
+        "requestBody": {
+          "requires": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "nomeLocal": {
+                    "type": "string",
+                    "description": "Nome do local a ser criado",
+                    "example": "Pátio"
+                  },
+                  "idLocal": {
+                    "type": "integer",
+                    "description": "Id do local a ser modificado"
+                  },
+                  "latitude": {
+                    "type": "string",
+                    "description": "Coordenadas do local a ser criado"
+                  },
+                  "longitude": {
+                    "type": "string",
+                    "description": "Coordenadas do local a ser criado"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Local modificado com sucesso"
+          },
+          "400": {
+            "description": "Erro ao modificar local"
           }
         }
       }
@@ -759,6 +925,36 @@
           },
           "400": {
             "description": "Erro ao excluir log"
+          }
+        }
+      }
+    },
+    "/setor/create": {
+      "post": {
+        "description": "Rota para criar log de vistoria",
+        "requestBody": {
+          "requires": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "nomeSetor": {
+                    "type": "string",
+                    "description": "Nome do setor a ser criado",
+                    "example": "Tijuca Alimentos Messejana"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Setor criado com sucesso"
+          },
+          "400": {
+            "description": "Erro ao criar Setor"
           }
         }
       }
